@@ -1,14 +1,14 @@
 package net.mineacle.core.baltop.gui;
 
-import net.mineacle.core.Core;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
+import net.mineacle.core.baltop.service.BalTopLeaderboardCache;
 import net.mineacle.core.common.gui.CenteredToolbar;
 import net.mineacle.core.common.gui.GuiSearchLore;
-import net.mineacle.core.common.player.DisplayNames;
 import net.mineacle.core.common.text.TextColor;
 import net.mineacle.core.economy.service.EconomyService;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
-import org.bukkit.OfflinePlayer;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.InventoryHolder;
@@ -16,12 +16,10 @@ import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
+import org.jetbrains.annotations.NotNull;
 
-import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
@@ -30,6 +28,11 @@ public final class BalTopGui {
 
     public static final int SIZE = 54;
     public static final int ENTRIES_PER_PAGE = 45;
+
+    private static final String SECONDARY = "&#B078FF";
+    private static final String ACCENT = "&#D0AFFF";
+    private static final String BODY = "&#bbbbbb";
+    private static final String MONEY = "&#11fc7b";
 
     private static final int[] TOOLBAR =
             CenteredToolbar.interiorSlots(SIZE, 3);
@@ -43,132 +46,151 @@ public final class BalTopGui {
             CenteredToolbar.nextSlot(SIZE);
     private static final int SLOT_EMPTY = 22;
 
-    private static final Map<UUID, SearchState> SEARCHES = new ConcurrentHashMap<>();
+    private static final Map<UUID, SearchState> SEARCHES =
+            new ConcurrentHashMap<>();
 
     private BalTopGui() {
     }
 
     public static void open(
-            Core core,
             Player player,
             EconomyService economyService,
+            BalTopLeaderboardCache leaderboardCache,
             int requestedPage
     ) {
-        List<Map.Entry<UUID, Long>> leaderboard = snapshot(economyService);
-        Map<UUID, Integer> placements = placements(leaderboard);
-        SearchState search = SEARCHES.get(player.getUniqueId());
-        List<Map.Entry<UUID, Long>> visibleEntries = filter(leaderboard, search);
+        BalTopLeaderboardCache.Snapshot snapshot =
+                leaderboardCache.current();
+        SearchState search =
+                SEARCHES.get(player.getUniqueId());
+        List<BalTopLeaderboardCache.Entry> visibleEntries =
+                search == null
+                        ? snapshot.entries()
+                        : snapshot.search(search.query());
 
         int totalPages = Math.max(
                 1,
-                (int) Math.ceil(visibleEntries.size() / (double) ENTRIES_PER_PAGE)
+                (int) Math.ceil(
+                        visibleEntries.size()
+                                / (double) ENTRIES_PER_PAGE
+                )
         );
-        int page = Math.max(0, Math.min(requestedPage, totalPages - 1));
+        int page = Math.clamp(
+                requestedPage,
+                0,
+                totalPages - 1
+        );
 
-        BalTopHolder holder = new BalTopHolder(page);
-        Inventory inventory = Bukkit.createInventory(
-                holder,
-                SIZE,
-                "Balance Top (Page " + (page + 1) + ")"
-        );
+        BalTopHolder holder =
+                new BalTopHolder(page);
+        Inventory inventory =
+                Bukkit.createInventory(
+                        holder,
+                        SIZE,
+                        Component.text(
+                                "Balance Top (Page "
+                                        + (page + 1)
+                                        + ")"
+                        )
+                );
         holder.inventory = inventory;
 
         int start = page * ENTRIES_PER_PAGE;
-        int end = Math.min(visibleEntries.size(), start + ENTRIES_PER_PAGE);
+        int end = Math.min(
+                visibleEntries.size(),
+                start + ENTRIES_PER_PAGE
+        );
 
-        for (int index = start; index < end; index++) {
-            Map.Entry<UUID, Long> entry = visibleEntries.get(index);
-            UUID targetId = entry.getKey();
-            OfflinePlayer target = Bukkit.getOfflinePlayer(targetId);
+        for (int index = start;
+             index < end;
+             index++) {
+            BalTopLeaderboardCache.Entry entry =
+                    visibleEntries.get(index);
             int slot = index - start;
-            int placement = placements.getOrDefault(targetId, 0);
 
             inventory.setItem(
                     slot,
                     playerEntry(
-                            target,
-                            economyService.format(entry.getValue()),
-                            placement
+                            entry,
+                            economyService
                     )
             );
-            holder.slotTargets.put(slot, targetId);
+            holder.slotTargets.put(
+                    slot,
+                    entry.playerId()
+            );
         }
 
         if (visibleEntries.isEmpty()) {
-            inventory.setItem(SLOT_EMPTY, emptyItem(search != null));
+            inventory.setItem(
+                    SLOT_EMPTY,
+                    emptyItem(search != null)
+            );
         }
 
-        inventory.setItem(
-                SLOT_PREVIOUS,
-                navigationItem(
-                        true,
-                        page > 0,
-                        Math.max(1, page)
-                )
-        );
+        if (page > 0) {
+            inventory.setItem(
+                    SLOT_PREVIOUS,
+                    navigationItem(
+                            true,
+                            page
+                    )
+            );
+        }
 
         inventory.setItem(
                 SLOT_PLAYER_HEAD,
                 selfHead(
                         player,
                         economyService,
-                        placements.getOrDefault(player.getUniqueId(), 0)
+                        snapshot.player(
+                                player.getUniqueId()
+                        )
                 )
         );
 
         inventory.setItem(
                 SLOT_REFRESH,
                 toolbar(
-                        Material.PAPER,
-                        "&dRefresh",
-                        List.of("&#bbbbbbClick to refresh Balance Top")
+                        Material.EMERALD,
+                        SECONDARY + "Refresh",
+                        List.of(
+                                BODY + "Click to refresh"
+                        )
                 )
         );
-
-        inventory.setItem(SLOT_SEARCH, searchItem(search));
 
         inventory.setItem(
-                SLOT_NEXT,
-                navigationItem(
-                        false,
-                        page < totalPages - 1,
-                        Math.min(totalPages, page + 2)
-                )
+                SLOT_SEARCH,
+                searchItem(search)
         );
+
+        if (page < totalPages - 1) {
+            inventory.setItem(
+                    SLOT_NEXT,
+                    navigationItem(
+                            false,
+                            page + 2
+                    )
+            );
+        }
 
         player.openInventory(inventory);
     }
 
-    public static boolean isDisabledNavigation(ItemStack item) {
-        return item == null
-                || item.getType()
-                == Material.GRAY_STAINED_GLASS_PANE;
-    }
-
-    private static ItemStack navigationItem(
-            boolean previous,
-            boolean enabled,
-            int targetPage
+    public static boolean isBalTopInventory(
+            Inventory inventory
     ) {
-        if (!enabled) {
-            return null;
-        }
-
-        return toolbar(
-                Material.ARROW,
-                previous ? "&dPrevious Page" : "&dNext Page",
-                List.of(
-                        "&#bbbbbbPage &#ff88ff" + targetPage
-                )
-        );
+        return inventory != null
+                && inventory.getHolder()
+                instanceof BalTopHolder;
     }
 
-    public static boolean isBalTopInventory(Inventory inventory) {
-        return inventory != null && inventory.getHolder() instanceof BalTopHolder;
-    }
-
-    public static BalTopHolder holder(Inventory inventory) {
-        if (inventory == null || !(inventory.getHolder() instanceof BalTopHolder holder)) {
+    public static BalTopHolder holder(
+            Inventory inventory
+    ) {
+        if (inventory == null
+                || !(inventory.getHolder()
+                instanceof BalTopHolder holder)) {
             return null;
         }
 
@@ -195,112 +217,142 @@ public final class BalTopGui {
         return SLOT_NEXT;
     }
 
-    public static void setSearch(Player player, String query, String displayLabel) {
-        if (player == null || query == null || query.isBlank()) {
+    public static void setSearch(
+            Player player,
+            String query,
+            String displayLabel
+    ) {
+        if (player == null
+                || query == null
+                || query.isBlank()) {
             clearSearch(player);
             return;
         }
 
-        String label = displayLabel == null || displayLabel.isBlank()
-                ? query.trim()
-                : displayLabel.trim();
+        String label =
+                displayLabel == null
+                        || displayLabel.isBlank()
+                        ? query.trim()
+                        : displayLabel.trim();
 
         SEARCHES.put(
                 player.getUniqueId(),
-                new SearchState(query.trim(), label)
+                new SearchState(
+                        query.trim(),
+                        label
+                )
         );
     }
 
-    public static void clearSearch(Player player) {
+    public static void clearSearch(
+            Player player
+    ) {
         if (player != null) {
-            SEARCHES.remove(player.getUniqueId());
+            SEARCHES.remove(
+                    player.getUniqueId()
+            );
         }
     }
 
-    public static boolean hasSearch(Player player) {
-        return player != null && SEARCHES.containsKey(player.getUniqueId());
+    public static boolean hasSearch(
+            Player player
+    ) {
+        return player != null
+                && SEARCHES.containsKey(
+                player.getUniqueId()
+        );
     }
 
     public static void clearAllState() {
         SEARCHES.clear();
     }
 
-    public static boolean hasMatches(Player player, EconomyService economyService) {
-        SearchState search = SEARCHES.get(player.getUniqueId());
-
-        if (search == null) {
-            return !economyService.topBalances(1).isEmpty();
-        }
-
-        return !filter(snapshot(economyService), search).isEmpty();
-    }
-
-    private static List<Map.Entry<UUID, Long>> snapshot(EconomyService economyService) {
-        List<Map.Entry<UUID, Long>> snapshot = new ArrayList<>();
-
-        for (Map.Entry<UUID, Long> entry : economyService.topBalances(Integer.MAX_VALUE)) {
-            snapshot.add(Map.entry(entry.getKey(), entry.getValue()));
-        }
-
-        return List.copyOf(snapshot);
-    }
-
-    private static Map<UUID, Integer> placements(List<Map.Entry<UUID, Long>> leaderboard) {
-        Map<UUID, Integer> placements = new HashMap<>();
-
-        for (int index = 0; index < leaderboard.size(); index++) {
-            placements.put(leaderboard.get(index).getKey(), index + 1);
-        }
-
-        return placements;
-    }
-
-    private static List<Map.Entry<UUID, Long>> filter(
-            List<Map.Entry<UUID, Long>> leaderboard,
-            SearchState search
+    public static boolean hasMatches(
+            Player player,
+            BalTopLeaderboardCache leaderboardCache
     ) {
-        if (search == null || search.query().isBlank()) {
-            return leaderboard;
+        if (player == null) {
+            return false;
         }
 
-        String query = search.query().toLowerCase(Locale.ROOT);
-        List<Map.Entry<UUID, Long>> filtered = new ArrayList<>();
+        SearchState search =
+                SEARCHES.get(player.getUniqueId());
+        BalTopLeaderboardCache.Snapshot snapshot =
+                leaderboardCache.current();
 
-        for (Map.Entry<UUID, Long> entry : leaderboard) {
-            OfflinePlayer target = Bukkit.getOfflinePlayer(entry.getKey());
-            String username = target.getName() == null ? "" : target.getName();
-            String displayName = DisplayNames.displayName(target);
+        return search == null
+                ? !snapshot.entries().isEmpty()
+                : !snapshot.search(
+                search.query()
+        ).isEmpty();
+    }
 
-            if (username.toLowerCase(Locale.ROOT).contains(query)
-                    || displayName.toLowerCase(Locale.ROOT).contains(query)) {
-                filtered.add(entry);
-            }
-        }
-
-        return filtered;
+    private static ItemStack navigationItem(
+            boolean previous,
+            int targetPage
+    ) {
+        return toolbar(
+                Material.ARROW,
+                SECONDARY
+                        + (previous
+                        ? "Previous Page"
+                        : "Next Page"),
+                List.of(
+                        BODY + "Page "
+                                + ACCENT
+                                + targetPage
+                )
+        );
     }
 
     private static ItemStack playerEntry(
-            OfflinePlayer target,
-            String balance,
-            int placement
+            BalTopLeaderboardCache.Entry entry,
+            EconomyService economyService
     ) {
-        ItemStack item = new ItemStack(Material.PLAYER_HEAD);
-        ItemMeta rawMeta = item.getItemMeta();
+        ItemStack item =
+                new ItemStack(Material.PLAYER_HEAD);
+        ItemMeta rawMeta =
+                item.getItemMeta();
 
         if (!(rawMeta instanceof SkullMeta meta)) {
             return item;
         }
 
-        meta.setOwningPlayer(target);
-        meta.setDisplayName(color("&#bbbbbb" + DisplayNames.displayName(target)));
-        meta.setLore(List.of(
-                color("&#bbbbbbBalance: &a" + balance),
-                color("&#bbbbbbRank: &#ff88ff#" + placement),
-                "",
-                color("&#bbbbbbClick to view stats")
-        ));
-        meta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES);
+        meta.setOwningPlayer(
+                Bukkit.getOfflinePlayer(
+                        entry.playerId()
+                )
+        );
+        meta.displayName(
+                component(
+                        SECONDARY
+                                + "#"
+                                + entry.placement()
+                                + " "
+                                + BODY
+                                + entry.displayName()
+                )
+        );
+        meta.lore(
+                List.of(
+                        component(
+                                BODY
+                                        + "Balance: "
+                                        + MONEY
+                                        + economyService.format(
+                                        entry.balanceCents()
+                                )
+                        ),
+                        Component.empty(),
+                        component(
+                                BODY
+                                        + "Click to view stats"
+                        )
+                )
+        );
+        meta.addItemFlags(
+                ItemFlag.HIDE_ATTRIBUTES
+        );
         item.setItemMeta(meta);
         return item;
     }
@@ -308,51 +360,84 @@ public final class BalTopGui {
     private static ItemStack selfHead(
             Player player,
             EconomyService economyService,
-            int placement
+            BalTopLeaderboardCache.Entry entry
     ) {
-        ItemStack item = new ItemStack(Material.PLAYER_HEAD);
-        ItemMeta rawMeta = item.getItemMeta();
+        ItemStack item =
+                new ItemStack(Material.PLAYER_HEAD);
+        ItemMeta rawMeta =
+                item.getItemMeta();
 
         if (!(rawMeta instanceof SkullMeta meta)) {
             return item;
         }
 
         meta.setOwningPlayer(player);
-        meta.setDisplayName(color("&#bbbbbb" + DisplayNames.displayName(player)));
-        meta.setLore(List.of(
-                color("&#bbbbbbBalance: &a"
-                        + economyService.format(
-                                economyService.getBalanceCents(player.getUniqueId())
-                        )),
-                color(
-                        placement <= 0
-                                ? "&#bbbbbbRank: &#ff88ffUnranked"
-                                : "&#bbbbbbRank: &#ff88ff#" + placement
-                ),
-                "",
-                color("&#bbbbbbClick to view your stats")
-        ));
-        meta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES);
+        meta.displayName(
+                component(
+                        SECONDARY + "Your Balance"
+                )
+        );
+        meta.lore(
+                List.of(
+                        component(
+                                BODY
+                                        + "Balance: "
+                                        + MONEY
+                                        + economyService.format(
+                                        economyService.getBalanceCents(
+                                                player.getUniqueId()
+                                        )
+                                )
+                        ),
+                        component(
+                                BODY
+                                        + "Rank: "
+                                        + ACCENT
+                                        + (entry == null
+                                        ? "Unranked"
+                                        : "#" + entry.placement())
+                        ),
+                        Component.empty(),
+                        component(
+                                BODY
+                                        + "Click to view your stats"
+                        )
+                )
+        );
+        meta.addItemFlags(
+                ItemFlag.HIDE_ATTRIBUTES
+        );
         item.setItemMeta(meta);
         return item;
     }
 
-    private static ItemStack searchItem(SearchState search) {
-        List<String> lore = search == null
-                ? GuiSearchLore.inactive("players")
-                : GuiSearchLore.active(search.displayLabel());
+    private static ItemStack searchItem(
+            SearchState search
+    ) {
+        List<String> lore =
+                search == null
+                        ? GuiSearchLore.inactive("players")
+                        : GuiSearchLore.active(
+                        search.displayLabel()
+                );
 
-        return toolbar(Material.OAK_SIGN, "&dSearch", lore);
+        return toolbar(
+                Material.OAK_SIGN,
+                SECONDARY + "Search",
+                lore
+        );
     }
 
-    private static ItemStack emptyItem(boolean searching) {
+    private static ItemStack emptyItem(
+            boolean searching
+    ) {
         if (searching) {
             return toolbar(
                     Material.BARRIER,
                     "&cNo Results",
                     List.of(
-                            "&#bbbbbbNo matching Balance Top players",
-                            "&#bbbbbbUse the Search button to try again"
+                            BODY
+                                    + "No matching players"
                     )
             );
         }
@@ -360,7 +445,10 @@ public final class BalTopGui {
         return toolbar(
                 Material.BARRIER,
                 "&cNo Balances",
-                List.of("&#bbbbbbNo balances have been recorded yet")
+                List.of(
+                        BODY
+                                + "No balances recorded"
+                )
         );
     }
 
@@ -369,34 +457,55 @@ public final class BalTopGui {
             String name,
             List<String> lore
     ) {
-        ItemStack item = new ItemStack(material);
-        ItemMeta meta = item.getItemMeta();
+        ItemStack item =
+                new ItemStack(material);
+        ItemMeta meta =
+                item.getItemMeta();
 
         if (meta == null) {
             return item;
         }
 
-        meta.setDisplayName(color(name));
-        meta.setLore(lore.stream().map(BalTopGui::color).toList());
-        meta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES);
+        meta.displayName(component(name));
+        meta.lore(
+                lore.stream()
+                        .map(BalTopGui::component)
+                        .toList()
+        );
+        meta.addItemFlags(
+                ItemFlag.HIDE_ATTRIBUTES
+        );
         item.setItemMeta(meta);
         return item;
     }
 
-    private static String color(String input) {
-        return TextColor.color(input);
+    private static Component component(
+            String input
+    ) {
+        return LegacyComponentSerializer
+                .legacySection()
+                .deserialize(
+                        TextColor.color(input)
+                );
     }
 
-    private record SearchState(String query, String displayLabel) {
+    private record SearchState(
+            String query,
+            String displayLabel
+    ) {
     }
 
-    public static final class BalTopHolder implements InventoryHolder {
+    public static final class BalTopHolder
+            implements InventoryHolder {
 
-        private final Map<Integer, UUID> slotTargets = new LinkedHashMap<>();
+        private final Map<Integer, UUID> slotTargets =
+                new LinkedHashMap<>();
         private final int page;
         private Inventory inventory;
 
-        private BalTopHolder(int page) {
+        private BalTopHolder(
+                int page
+        ) {
             this.page = page;
         }
 
@@ -404,12 +513,14 @@ public final class BalTopGui {
             return page;
         }
 
-        public UUID targetAt(int slot) {
+        public UUID targetAt(
+                int slot
+        ) {
             return slotTargets.get(slot);
         }
 
         @Override
-        public Inventory getInventory() {
+        public @NotNull Inventory getInventory() {
             return inventory;
         }
     }
